30-06-2004 Qball <Qball@qballcow.nl>
	* Fixed double click on playlist. it now adds it to the list.
	* info.old_pos is reset on disconnect
	* Added comment to the playlist2.c 
	* Added check_for_errors after every mpd_finishCommand
	* Added check_connection_state at the beginnning of every function.
	* added a Check connection_state function
	* Added remote fetching and parsing of .m3u/.pls files
	* Added dnd on open-location window and button
	* Saving playlist
	* Removed lots of code for old playlist.
	* Remove src/playlist.c
	* removed playlist code from glade/gmpc.glade

29-06-2004 Qball <Qball@qballcow.nl>
	* added timeout.. half a second after you stop typing in filter entry,
	the tree is filtered.
	* Added temporary open location window
	* after updating the gui (in filling song-browser) check if the user
	closed the window
	* Added icons to the window


28-06-2004 Qball <Qball@qballcow.nl>
	* Added a song-browser window
	* Added images for song/stream to playlist
	* song-browser reloads if playlist changes.
	* Added custom stock icons.
	* Adding from song browser now completely works.

27-06-2004 Qball <Qball@qballcow.nl>
	* Changed move function so it works with filtered playlist
	* Force update after changes to playlist (delete and move)
	* added function main_trigger_update
	* Implemented clearing. (pressing remove when nothing is selected)
	* Added keybindings (del)
	* Added some tooltips
	* Implemented delete in pl2. (single and multiple select

26-06-2004 Qball <Qball@qballcow.nl>
	* Implemented primary dnd support in pl2.

24-06-2004 Qball <Qball@qballcow.nl>
	* Removed filling of info.playlist
	* Made search case insensitive
	* don't match when no match string

23-06-2004 Qball <Qball@qballcow.nl>
	* removed the need of info.playlist in id3info and the popup/tray icon
	* middle mouse click on tray-icon pauses/plays

15-05-2004 Qball <Qball@qballcow.nl>
	* window title is now <song info > 
	* more old code removed